parser/tests/snapshots/errors__string_invalid_escape.snap
---
source: parser/tests/errors.rs
expression: err

---
error: String contains an invalid escape sequence
  ┌─ [test snippet]:1:1
  │
1 │ "a string \c "
  │ ^^^^^^^^^^^^^^


